DevOrg/src/objects/ACH_Credentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompanyKey__c</fullName>
        <label>CompanyKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Test__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocID__c</fullName>
        <label>LocID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSS__c</fullName>
        <label>SSS</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>ACH Credentials</label>
</CustomObject>